examples/errors/global_unreachable.tm
namespace Main005;

int32 main() {
    unreachable();
    ret 0;
}
